# NVSentinel

./: .gitignore  .versions.yaml  Makefile
.github/: copy-pr-bot.yaml
.github/workflows/: lint-test.yml  (+3 more)
api/: Makefile
commons/: go.mod  go.sum
data-models/: Makefile  go.mod  go.sum  tools.go
docs/: monitoring-critical-operators.md
event-exporter/: go.mod  go.sum
fault-quarantine/: go.mod  go.sum
fault-remediation/: go.mod  go.sum
gpu-reset/: Dockerfile  Makefile  Tiltfile  gpu_reset.sh
health-events-analyzer/: go.mod  go.sum
janitor/: Makefile  go.mod  go.sum
janitor-provider/: go.mod  go.sum
labeler/: go.mod  go.sum  main.go
log-collector/: entrypoint.sh
make/: common.mk
metadata-collector/: go.mod  go.sum
node-drainer/: go.mod  go.sum
platform-connectors/: go.mod  go.sum  main.go
preflight/: go.mod  go.sum
preflight-checks/dcgm-diag/: Dockerfile  Makefile  pyproject.toml
preflight-checks/dcgm-diag/dcgm_diag/: __main__.py  config.py  diag.py  errors.py  gpu.py  health.py  logger.py
preflight-checks/dcgm-diag/dcgm_diag/protos/: health_event_pb2.py  health_event_pb2.pyi  health_event_pb2_grpc.py
preflight-checks/dcgm-diag/dcgm_diag/tests/: conftest.py  test_config.py  test_diag.py  test_errors.py  test_health.py
scripts/: build-image-list.sh  buildko.sh  check-image-attestations.sh
store-client/: go.mod  go.sum
tests/: csp_health_monitor_test.go  fault_management_test.go  fault_quarantine_test.go  go.mod  go.sum  gpu_health_monitor_test.go  kubernetes_object_monitor_test.go  syslog_health_monitor_test.go
tilt/: Tiltfile
(+110 files in other folders)
